# CRoPS

./: .gitignore  3  50  60  Doxyfile  Makefile  README.md  README.txt  TODO.md  improvments  run.sh  tags
TAROS13boids/: cpaper.tex  m7.ppm  makefile  mp.bib  paper.aux  paper.bbl  paper.blg  paper.tex  plaku.bib  results.cpp
code/: boid.py  boidsimulation.py  configuration.py  dijkstra.py  gatherstats.py  goal.py  mapparser.py  obstacle.py  prm.py  test_sim.py
code/CodePolygons/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/CodePolygons/src/Utils/: Algebra3D.cpp  Algebra3D.hpp  Constants.hpp  DLHandler.cpp  Definitions.hpp  DisjointSet.cpp  DisjointSet.hpp  GCamera.cpp  GCamera.hpp  GDraw.cpp  GDraw.hpp  GManager.cpp  GMaterial.hpp  GText3D.cpp  GTexture.cpp  GenerateMaze2D.hpp  Geometry.cpp  GraphSearch.hpp  Grid.cpp  Grid.hpp  Heap.hpp  Misc.hpp  Polygon2D.hpp  PrintMsg.hpp  PseudoRandom.hpp  Statistics.hpp  Timer.hpp
impede/: m7_random_walk_10_0  m7_random_walk_10_1  m7_random_walk_10_10  m7_random_walk_10_11  m7_random_walk_10_12  m7_random_walk_10_13  m7_random_walk_10_14  m7_random_walk_10_15  m7_random_walk_10_16  m7_random_walk_10_17  m7_random_walk_10_18  m7_random_walk_10_19  m7_random_walk_10_2  m7_random_walk_10_3  m7_random_walk_10_4  m7_random_walk_10_5  m7_random_walk_10_6  m7_random_walk_10_7  m7_random_walk_10_8  m7_random_walk_10_9  m7_random_walk_15_0  m7_random_walk_15_1  m7_random_walk_15_10  m7_random_walk_15_11  m7_random_walk_15_12  m7_random_walk_15_13  m7_random_walk_15_14  m7_random_walk_15_15  m7_random_walk_15_16  m7_random_walk_15_17  m7_random_walk_15_18  m7_random_walk_15_19  m7_random_walk_15_2  m7_random_walk_15_3  m7_random_walk_15_4  m7_random_walk_15_5  m7_random_walk_15_6  m7_random_walk_15_7  m7_random_walk_15_8  m7_random_walk_15_9  (+618 more)
maps/: hurdles.map  maze.map  maze2.map  s.map  scene1.obstacles  scene1_obstacles.map  scene1_obstacles.obstacles
presentation/: .~lock.TalkTAROS2013.odp#  TalkTAROS2013.aux  TalkTAROS2013.nav  TalkTAROS2013.odp  TalkTAROS2013.tex  slide_text.txt  style.tex
simdata/: m7_prm_data_30_0  m7_prm_data_50_0  m7_simulation_data_30_0  m7_simulation_data_50_0  scene1_prm_data_30_0  scene1_prm_data_50_0  scene1_simulation_data_30_0  scene1_simulation_data_50_0  scene2_prm_data_30_0  scene2_prm_data_50_0  scene2_simulation_data_50_0
stats/: hurdles_50_10_0  m7_output_10_0  m7_output_10_1  m7_output_10_10  m7_output_10_11  m7_output_10_12  m7_output_10_13  m7_output_10_14  m7_output_10_15  m7_output_10_16  m7_output_10_17  m7_output_10_18  m7_output_10_19  m7_output_10_2  m7_output_10_3  m7_output_10_4  m7_output_10_5  m7_output_10_6  m7_output_10_7  m7_output_10_8  m7_output_10_9  m7_output_15_0  m7_output_15_1  m7_output_15_10  m7_output_15_11  m7_output_15_12  m7_output_15_13  m7_output_15_14  m7_output_15_15  m7_output_15_16  m7_output_15_17  m7_output_15_18  m7_output_15_19  m7_output_15_2  m7_output_15_3  m7_output_15_4  m7_output_15_5  m7_output_15_6  m7_output_15_7  m7_output_15_8  (+715 more)
updates/: ICAPSedit.md
videos/: Box.ogv  Box2.ogv  CrazySFormation.ogv  Maze.ogv  PolyField1.ogv  PolyField2.ogv  PolySForm.ogv  PolygonField.ogv  Random.ogv  Triangle.ogv  TriangleSqueeze.ogv  WithoutPRM.ogv  m1.ogv  m4.ogv  m5-1.ogv  m5.ogv  (+6 more)
(+2964 files in other folders)
